Dashboard working start

--- a/src/Containers/SignUp/Signup.css
+++ b/src/Containers/SignUp/Signup.css
@@ -35,7 +35,7 @@
 .sidestwo {
     width: 40%;
     height: 550px;
-    background-image: url("../../Images/ecommerce.webp");
+    background-image: url("../../Images/commerce.jpg");
     background-repeat: no-repeat;
     background-size: 100% 550px;
 }
