--- a/src/Containers/Login/Login.css
+++ b/src/Containers/Login/Login.css
@@ -67,12 +67,15 @@
         flex-direction: column;
     }
     .side {
-        width: 80%;
+        width: 100%;
     }
     .forms {
         width: 100%;
     }
     .sidetwo {
         display: none;
+    }
+    .for-cont input {
+        width: 100%;
     }
 }
