--- a/src/Containers/Dashboard/Dashboard.css
+++ b/src/Containers/Dashboard/Dashboard.css
@@ -9,9 +9,160 @@
     margin-top: 30px;
 }
 
+/* Cateogries Start */
+
 .categories-opt {
     width: 100%;
-    height: 500px;
-    background-color: aqua;
+    height: auto;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.categories-opt .card {
+    margin: 10px !important;
+    height: 280px; 
+    border-right: 2px solid red;
+    border-left: 2px solid red;
+}
+
+.categories-opt .posts-heading {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    border: 1px solid #ff9a9e;
+    text-align: center;
+    background-image: linear-gradient(to right, #ff9a9e, #ffecd2);
+}
+
+.categories-opt .cards-area .card .posts-heading {
+    background-image: linear-gradient(to right, #4ca2cd , #67B26F) !important;
+    border: 1px solid #67B26F;
+}
+
+.categories-opt .posts-heading h2 {
+    color: blue;
+}
+
+.categories-opt .cards-area .posts-heading h4 {
+    color: #0bf303;
+}
+
+.categories-opt .cards-area .card .card-body .card-title {
+    color: blue;
+}
+
+.categories-opt .cards-area .card .card-body .card-title:hover {
+    cursor: pointer;
+    text-decoration-line: underline;
+}
+
+/*Category ends */
+
+/* latest posts starts */
+
+.latest-posts {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    border-bottom: 1px solid black !important;
+}
+
+.latest-posts .card {
+    margin: 10px !important;
+}
+
+.latest-posts .posts-heading {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    border: 1px solid #ff9a9e;
+    text-align: center;
+    background-image: linear-gradient(to right, #ff9a9e, #ffecd2);
+}
+
+.latest-posts .posts-heading h2 {
+    color: black;
+}
+
+.cards-area {
+    width: 100%;
+    height: auto;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* latest posts ends */
+
+/* Reputation starts */
+
+.bg-img {
+    border-radius: 4px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+}
+
+.bg-img .overlay_dark {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.countdown {
+    text-align: center;
+}
+
+.countdown div {
+    margin: 20px;
+    display: inline-block;
+    padding: 25px;
+    min-width: 120px;
+    background-color: #F44336;
+    color: #ffffff;
+    font-size: 48px;
+    font-weight: 600;
+    text-align: center;
+    line-height: 1.2;
+}
+
+.countdown div span {
+    display: block;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.pt70 {
+    padding-top: 70px;
+    margin-top: 10px;
+}
+
+.pb70 {
+    padding-bottom: 70px;
+    margin-bottom: 20px;
+}
+
+.color-light {
+    color: #ffffff !important;
+}
+
+/* Reputation ends */
+
+@media only screen and (max-width: 900px) {
+    .cat-div {
+        width: 40%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .all {
+        flex-direction: column;
+        align-content: center;
+    }
+    .cat-div {
+        width: 90%;
+    }
 }
